--- a/app/src/main/res/layout/card_main_fragment.xml
+++ b/app/src/main/res/layout/card_main_fragment.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="160dp"
+    android:layout_margin="@dimen/margin_small"
+    app:cardElevation="@dimen/elevation_low"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:id="@+id/container_holder"
